tests/compile_fail/007_seek_invalid_mode_parser.vox
Seek source to page 1.
